--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -27,10 +27,10 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    style="@android:style/TextAppearance.Medium"
+                    android:textSize="18dp"
                     android:text=""
                     android:layout_marginTop="20dp"
-                    android:textColor="#4f2680"/>
+                    android:textColor="@color/purple"/>
 
                 <TextView
                     android:id="@+id/message"
@@ -43,39 +43,39 @@
                     android:layout_marginBottom="20dp"
                     android:textSize="15dp"
                     android:text=""
-                    android:textColor="#333333"/>
+                    android:textColor="@color/termtext"/>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="20dp"
                     android:orientation="horizontal" >
 
                     <Button
                         android:id="@+id/left"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight=".5"
+                        android:layout_height="50dp"
+                        android:layout_weight=".3"
                         android:gravity="center"
                         android:text="건너뛰기"
-                        android:textColor="#ffffff"
+                        android:textColor="@color/termtext"
                         android:textSize="13dp"
-                        android:background="@drawable/style_dialog_confirm_button_left"
-                        android:padding="17dp"/>
+                        android:background="@color/white" />
 
                     <Button
                         android:id="@+id/right"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_weight=".5"
                         android:gravity="center"
                         android:text="확인"
-                        android:textColor="#ffffff"
+                        android:textColor="@color/white"
                         android:textSize="13dp"
-                        android:background="@drawable/style_dialog_confirm_button_right"
-                        android:textStyle="bold"
-                        android:padding="17dp"/>
+                        android:background="@color/purple" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
