--- a/app/src/main/res/layout/dialog_fee.xml
+++ b/app/src/main/res/layout/dialog_fee.xml
@@ -23,61 +23,61 @@
                 android:orientation="vertical">
 
                 <TextView
-                        android:id="@+id/title"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        style="@android:style/TextAppearance.Medium"
-                        android:text=""
-                        android:layout_marginTop="20dp"
-                        android:textColor="#4f2680"/>
+                    android:id="@+id/title"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:text=""
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/purple"/>
 
                 <TextView
-                        android:id="@+id/message"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginLeft="7dp"
-                        android:layout_marginRight="7dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:textSize="15dp"
-                        android:text=""
-                        android:textColor="#333333"/>
+                    android:id="@+id/message"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="15dp"
+                    android:text=""
+                    android:textColor="@color/termtext"/>
 
                 <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal" >
+
+                    <Button
+                        android:id="@+id/left"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_weight=".3"
                         android:gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:orientation="horizontal" >
+                        android:text="건너뛰기"
+                        android:textColor="@color/termtext"
+                        android:textSize="13dp"
+                        android:background="@color/white" />
 
                     <Button
-                            android:id="@+id/left"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight=".5"
-                            android:gravity="center"
-                            android:text="건너뛰기"
-                            android:textColor="#ffffff"
-                            android:textSize="13dp"
-                            android:background="@drawable/style_dialog_confirm_button_left"
-                            android:padding="17dp"/>
-
-                    <Button
-                            android:id="@+id/right"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight=".5"
-                            android:gravity="center"
-                            android:text="확인"
-                            android:textColor="#ffffff"
-                            android:textSize="13dp"
-                            android:background="@drawable/style_dialog_confirm_button_right"
-                            android:textStyle="bold"
-                            android:padding="17dp"/>
+                        android:id="@+id/right"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_weight=".5"
+                        android:gravity="center"
+                        android:text="확인"
+                        android:textColor="#ffffff"
+                        android:textSize="13dp"
+                        android:background="@color/purple" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
