--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sel_item"
     android:layout_width="290dp"
     android:layout_height="254dp"
@@ -11,11 +12,12 @@
         android:layout_width="290dp"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_image"
             android:layout_width="290dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            app:riv_corner_radius="2dp"/>
         
         <ImageView
             android:id="@+id/btn_favorite"
