--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="206dp"
@@ -15,4 +16,20 @@
         android:layout_marginTop="13dp"
         android:layout_marginBottom="13dp"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pager_count_round"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:textSize="11dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="24dp"
+        tools:text=" 3/10 + "/>
+</RelativeLayout>
