--- a/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="290dp"
     android:layout_height="254dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
@@ -10,11 +11,12 @@
         android:layout_width="290dp"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_image"
             android:layout_width="290dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            app:riv_corner_radius="2dp"/>
 
         <ImageView
             android:layout_width="24dp"
