--- a/app/src/main/res/layout/layout_keyword_item.xml
+++ b/app/src/main/res/layout/layout_keyword_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="117dp"
     android:layout_height="95dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -12,12 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:layout_marginTop="1dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            app:riv_corner_radius_top_left="2dp"
+            app:riv_corner_radius_top_right="2dp"/>
 
         <TextView
             android:id="@+id/tv_keyword"
@@ -36,11 +39,5 @@
             android:layout_height="2dp"
             android:layout_below="@id/tv_keyword"
             android:background="#14000000"/>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="95dp"
-            android:scaleType="fitXY"
-            android:background="@drawable/background_rounding"/>
     </RelativeLayout>
 </LinearLayout>
