--- a/app/src/main/res/layout/layout_map_item.xml
+++ b/app/src/main/res/layout/layout_map_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_board"
-    android:layout_width="228dp"
+    android:layout_width="236dp"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/style_round_map_item_default"
@@ -96,7 +96,7 @@
 
         <ImageView
             android:id="@+id/img_hotel"
-            android:layout_width="196dp"
+            android:layout_width="match_parent"
             android:layout_height="90dp"
             android:scaleType="fitXY"
             android:layout_marginTop="10dp"
