--- a/app/src/main/res/layout/layout_recent_item.xml
+++ b/app/src/main/res/layout/layout_recent_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="290dp"
     android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="15dp"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,10 +12,11 @@
         android:layout_width="290dp"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_image"
             android:layout_width="290dp"
             android:layout_height="150dp"
+            app:riv_corner_radius="2dp"
             android:scaleType="fitXY" />
 
         <LinearLayout
