--- a/app/src/main/res/layout/layout_theme_special_item.xml
+++ b/app/src/main/res/layout/layout_theme_special_item.xml
@@ -3,16 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/style_theme_special_border"
     android:layout_marginBottom="13dp"
     android:orientation="vertical">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="129dp"
         android:layout_margin="1dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        app:riv_corner_radius_top_left="2dp"
+        app:riv_corner_radius_top_right="2dp"/>
 
     <TextView
         android:id="@+id/tv_title"
