--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,11 +27,12 @@
     </style>
 
     <style name="TitleText" >
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/blacktxt</item>
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:letterSpacing">-0.02</item>
         <item name="android:singleLine">true</item>
     </style>
 
