--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:background="@color/white"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="@android:color/transparent"
+        android:theme="@style/AppTheme.TransNav">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -101,11 +101,12 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_centerVertical="true"
+                        android:layout_marginRight="16dp"
                         android:layout_alignParentRight="true">
                         <ImageView
                             android:id="@+id/icon_zzim"
-                            android:layout_width="18dp"
-                            android:layout_height="16dp"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:background="@drawable/ico_titbarw_favorite"
                             android:layout_gravity="center"/>
                     </LinearLayout>
@@ -115,12 +116,12 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginRight="12dp"
                         android:layout_toLeftOf="@id/btn_zzim">
                         <ImageView
                             android:id="@+id/icon_share"
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:background="@drawable/ico_titbarw_share"
                             android:layout_gravity="center"/>
                     </LinearLayout>
