--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -97,11 +97,21 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_per"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:layout_marginLeft="16dp"
+                android:textColor="@color/redtext"
+                tools:text="48%↓"/>
+
+            <TextView
                 android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="4dp"
                 android:textSize="16dp"
+                android:textStyle="bold"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
                 tools:text="205,700" />
@@ -113,6 +123,7 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginTop="2dp"
                 android:textSize="12dp"
+                android:textStyle="bold"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
                 android:text="원 ~" />
@@ -121,7 +132,8 @@
                 android:id="@+id/hotel_info3"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:gravity="right|center"
+                android:gravity="left|center"
+                android:layout_marginLeft="10dp"
                 android:orientation="horizontal">
 
                 <ImageView
