--- a/app/src/main/res/layout/layout_theme_item.xml
+++ b/app/src/main/res/layout/layout_theme_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
+    android:id="@+id/sel_item"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
@@ -19,6 +20,7 @@
             app:riv_corner_radius="2dp"/>
 
         <ImageView
+            android:id="@+id/btn_favorite"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:scaleType="fitXY"
