--- a/app/src/main/res/layout/layout_theme_speical_item.xml
+++ b/app/src/main/res/layout/layout_theme_speical_item.xml
@@ -12,6 +12,17 @@
         android:id="@+id/hid"
         android:layout_width="0dp"
         android:layout_height="0dp" />
+
+    <TextView
+        android:id="@+id/sdate"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+    <TextView
+        android:id="@+id/edate"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+
+
     <LinearLayout
         android:id="@+id/ll_item"
         android:layout_width="match_parent"
