--- a/app/src/main/res/layout/layout_stay_item.xml
+++ b/app/src/main/res/layout/layout_stay_item.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
-
+    <TextView
+        android:id="@+id/hid"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="160dp">
