--- a/app/src/main/res/layout/layout_search_auto_item.xml
+++ b/app/src/main/res/layout/layout_search_auto_item.xml
@@ -6,6 +6,10 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <TextView
+        android:id="@+id/hid"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
     <ImageView
         android:id="@+id/ico_item"
         android:layout_alignParentLeft="true"
