--- a/app/src/main/res/drawable/style_round_refresh.xml
+++ b/app/src/main/res/drawable/style_round_refresh.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/bg_background" />
+            <solid android:color="@color/footerview" />
             <stroke
                 android:width="1dp"
-                android:color="@color/footerview" />
+                android:color="@color/bg_background" />
             <corners android:radius="5dp" />
         </shape>
     </item>
