--- a/app/src/main/res/layout/activity_hotel_filter.xml
+++ b/app/src/main/res/layout/activity_hotel_filter.xml
@@ -273,7 +273,7 @@
                     android:id="@+id/textMin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
+                    android:text="0원"
                     android:layout_below="@id/rangeSeekbar1"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="10dp"
