--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,14 +11,14 @@
 
         <LinearLayout
             android:id="@+id/btn_back"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="12dp"
+            android:layout_width="50dp"
+            android:layout_height="55dp"
             android:layout_centerVertical="true">
             <ImageView
                 android:id="@+id/icon_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginLeft="12dp"
                 android:background="@drawable/ico_titbar_back"
                 android:layout_gravity="center"/>
         </LinearLayout>
@@ -29,14 +29,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp">
+            android:layout_marginTop="25dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
