--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -106,6 +106,8 @@
                 android:textColor="@color/white"
                 android:gravity="center_vertical"
                 android:layout_margin="5dp"
+                android:paddingRight="9dp"
+                android:paddingLeft="9dp"
                 android:textSize="12dp" />
         </LinearLayout>
     </RelativeLayout>
