--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -17,6 +17,14 @@
         <item>낮은 가격순</item>
         <item>높은 가격순</item>
     </string-array>
+
+    <string-array name="list_orderby_code">
+        <item>recommendation</item>
+        <item>distance</item>
+        <item>rate</item>
+        <item>price_low</item>
+        <item>price_high</item>
+    </string-array>
     <string-array name="category_text">
         <item>특1급</item>
         <item>특2급</item>
