--- a/app/src/main/res/layout/layout_hotel_header.xml
+++ b/app/src/main/res/layout/layout_hotel_header.xml
@@ -77,6 +77,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginLeft="16dp"
