--- a/app/src/main/res/layout/fragment_h_result.xml
+++ b/app/src/main/res/layout/fragment_h_result.xml
@@ -20,6 +20,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
+        android:visibility="gone"
         android:background="@drawable/style_edittext_gray_border">
         <ImageView
             android:layout_width="15dp"
@@ -41,6 +42,7 @@
         android:id="@+id/bt_scroll"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:visibility="gone"
         android:background="@drawable/btn_screenup"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
