--- a/app/src/main/res/layout/layout_reservation_pay.xml
+++ b/app/src/main/res/layout/layout_reservation_pay.xml
@@ -71,6 +71,8 @@
                 android:layout_marginLeft="4dp"
                 android:textColor="@color/white"
                 android:gravity="center"
+                android:text="2"
+                android:textSize="11dp"
                 android:background="@drawable/style_oval_purple"/>
         </LinearLayout>
 
