--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -44,7 +44,7 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/purple"
                 android:textSize="16dp"
-                tools:text="서울"/>
+                android:text="프라이빗딜"/>
 
             <View
                 android:layout_width="match_parent"
