--- a/app/src/main/res/layout/dialog_fee.xml
+++ b/app/src/main/res/layout/dialog_fee.xml
@@ -1,85 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="44dp"
+    android:layout_marginBottom="44dp"
+    android:orientation="vertical"
+    android:background="@color/white">
 
-    <LinearLayout
-        android:layout_width="310dp"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|center_vertical"
         android:orientation="vertical">
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/layout_btn"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true">
+
+            <Button
+                android:id="@+id/left"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight=".3"
+                android:gravity="center"
+                android:text="건너뛰기"
+                android:textColor="@color/termtext"
+                android:textSize="13dp"
+                android:background="@color/white" />
+
+            <Button
+                android:id="@+id/right"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight=".5"
+                android:gravity="center"
+                android:text="확인"
+                android:textColor="#ffffff"
+                android:textSize="13dp"
+                android:background="@color/purple" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
+            android:gravity="center"
+            android:textSize="18dp"
+            android:layout_alignParentTop="true"
+            android:text=""
+            android:layout_marginTop="20dp"
+            android:textColor="@color/purple"/>
 
-            <LinearLayout
+        <ScrollView
+            android:layout_above="@id/layout_btn"
+            android:layout_below="@id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:layout_marginTop="20dp"
+            android:scrollbars="none"
+            android:overScrollMode="never">
+            <TextView
+                android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/style_dialog_confirm"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="18dp"
-                    android:text=""
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/purple"/>
-
-                <TextView
-                    android:id="@+id/message"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textSize="15dp"
-                    android:text=""
-                    android:textColor="@color/termtext"/>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginBottom="20dp"
-                    android:orientation="horizontal" >
-
-                    <Button
-                        android:id="@+id/left"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight=".3"
-                        android:gravity="center"
-                        android:text="건너뛰기"
-                        android:textColor="@color/termtext"
-                        android:textSize="13dp"
-                        android:background="@color/white" />
-
-                    <Button
-                        android:id="@+id/right"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight=".5"
-                        android:gravity="center"
-                        android:text="확인"
-                        android:textColor="#ffffff"
-                        android:textSize="13dp"
-                        android:background="@color/purple" />
-                </LinearLayout>
-            </LinearLayout>
+                android:gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textSize="15dp"
+                android:text=""
+                android:textColor="@color/termtext"/>
         </ScrollView>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
