--- a/app/src/main/res/layout/layout_favorite_login.xml
+++ b/app/src/main/res/layout/layout_favorite_login.xml
@@ -19,9 +19,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="vertical"
-        android:layout_marginBottom="16dp"
         android:layout_above="@+id/btn_go_login">
 
         <TextView
