--- a/app/src/main/res/layout/activity_review_show.xml
+++ b/app/src/main/res/layout/activity_review_show.xml
@@ -184,6 +184,7 @@
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/title_ch"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
