--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -148,6 +148,7 @@
 
      <!--하단 뷰-->
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
