--- a/app/src/main/res/layout/layout_stay_item.xml
+++ b/app/src/main/res/layout/layout_stay_item.xml
@@ -8,6 +8,14 @@
         android:id="@+id/hid"
         android:layout_width="0dp"
         android:layout_height="0dp" />
+    <TextView
+        android:id="@+id/sdate"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+    <TextView
+        android:id="@+id/edate"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="160dp">
