--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -17,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="56dp"
             android:background="@color/white"
             android:gravity="center_vertical">
 
@@ -31,26 +31,24 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/ico_titbar_back" />
+                    android:background="@drawable/ico_titbar_close" />
             </RelativeLayout>
 
             <TextView
                 android:id="@+id/title_text"
-                android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:layout_toRightOf="@id/title_back"
-                android:layout_toLeftOf="@id/re_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
                 android:singleLine="true"
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"
                 android:textColor="@color/purple"
                 android:textSize="16dp"
-                tools:text="서울"/>
+                android:text="" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/title_text"
+                android:layout_below="@+id/title_back"
                 android:background="@color/bg_background" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
