--- a/app/src/main/res/layout/activity_reservation_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_hotel_detail.xml
@@ -62,7 +62,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp" />
 
-    <ScrollView
+    <com.hotelnow.utils.EndEventScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -1024,5 +1025,5 @@
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
-    </ScrollView>
+    </com.hotelnow.utils.EndEventScrollView>
 </RelativeLayout>
